--- a/music/styles/style.css
+++ b/music/styles/style.css
@@ -21,7 +21,6 @@
 .container .sidebar {
   width: 40%;
   height: 95%;
-  border: 2px solid red;
 }
 .container .player {
   display: flex;
@@ -30,9 +29,8 @@
   flex-direction: column;
   width: 58%;
   height: 95%;
-  border: 2px solid green;
-  background: rgb(152, 160, 157);
-  background: linear-gradient(174deg, rgb(152, 160, 157) 0%, rgba(170, 218, 218, 0.924894958) 33%);
+  background: rgb(175, 221, 221);
+  background: linear-gradient(174deg, rgb(175, 221, 221) 0%, rgb(201, 235, 233) 33%);
 }
 .container .player img {
   -o-object-fit: cover;
@@ -41,7 +39,6 @@
 }
 .container .player .details {
   height: 100px;
-  border: 1px solid red;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -61,10 +58,12 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  gap: 20px;
 }
 .container .player .controls img {
-  height: 50%;
-  width: 50%;
+  height: 40%;
+  width: 40%;
+  box-shadow: none;
 }
 .container .player .controls button {
   display: flex;
@@ -72,15 +71,57 @@
   align-items: center;
   height: 40px;
   width: 40px;
-  background: #b0d3d2;
+  background: #b5e0df;
   border-radius: 50%;
   border: none;
   cursor: pointer;
 }
-.container .player .controls .buttons, .container .player .controls .bar, .container .player .controls .others {
+.container .player .controls button:hover {
+  background: #b2dcdc;
+}
+.container .player .controls .buttons, .container .player .controls .bar {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
   margin-top: 20px;
+}
+.container .player .controls .play {
+  height: 50px;
+  width: 50px;
+}
+.container .player .controls .range {
+  width: 300px;
+}
+.container .player .controls p {
+  width: 300px;
+  margin-top: -10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: space-between;
+}
+.container .player .controls input[type=range] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+}
+.container .player .controls input[type=range]::-webkit-slider-runnable-track {
+  -webkit-appearance: none;
+  background: #053a5f;
+  height: 0.4rem;
+  border-radius: 5px;
+}
+.container .player .controls input[type=range]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  margin-top: -7px;
+  border-radius: 50%;
+  background-color: rgb(115, 115, 211);
+  height: 20px;
+  width: 20px;
+}
+.container .player .controls .volume {
+  position: absolute;
+  margin-left: 380px;
 }/*# sourceMappingURL=style.css.map */
