--- a/music/styles/style.scss
+++ b/music/styles/style.scss
@@ -22,23 +22,19 @@
     .sidebar{
         width: 40%;
         height: 95%;
-        border: 2px solid red;
     }
     .player{
         @include center;
         flex-direction: column;
         width: 58%;
         height: 95%;
-        border: 2px solid green;
-        background: rgb(152,160,157);
-        background: linear-gradient(174deg, rgba(152,160,157,1) 0%, rgba(170,218,218,0.9248949579831933) 33%);
-        img{
-            object-fit: cover;
-            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        background: rgb(175,221,221);
+        background: linear-gradient(174deg, rgba(175,221,221,1) 0%, rgba(201,235,233,1) 33%);        img{
+        object-fit: cover;
+        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
         }
         .details{
             height: 100px;
-            border: 1px solid red;
             width: 100%;
             @include center;
             flex-direction: column;
@@ -54,24 +50,66 @@
         .controls{
             @include center;
             flex-direction: column;
+            gap: 20px;
             img{
-                height: 50%;
-                width: 50%;
+                height: 40%;
+                width: 40%;
+                box-shadow: none;
             }
             button{
                 @include center;
                 height: 40px;
                 width: 40px;
-                background: #b0d3d2;
+                background: #b5e0df;
                 border-radius: 50%;
                 border: none;
                 cursor: pointer;
+                &:hover{
+                    background: #b2dcdc;
+                }
             }
-            .buttons,.bar,.others{
+            .buttons,.bar{
                 @include center;
                 gap: 20px;
                 margin-top: 20px;
             }
+            .play{
+                height: 50px;
+                width: 50px;
+            }
+            .range{
+                width: 300px;
+            }
+            p{
+                width: 300px;
+                margin-top: -10px;
+                @include center;
+                justify-content: space-between;
+            }
+            input[type='range']{
+                -webkit-appearance: none;
+                appearance: none;
+
+            }
+            input[type="range"]::-webkit-slider-runnable-track {
+                -webkit-appearance: none;
+                background: #053a5f;
+                height: 0.4rem;
+                border-radius: 5px;
+            }
+            input[type="range"]::-webkit-slider-thumb {
+                -webkit-appearance: none; 
+                appearance: none;
+                margin-top: -7px;
+                border-radius: 50%;
+                background-color: rgb(115, 115, 211);
+                height: 20px;
+                width: 20px;    
+             }
+             .volume{
+                position: absolute;
+                margin-left: 380px;
+             }
         }
     }
 }
