--- a/music/styles/style.css
+++ b/music/styles/style.css
@@ -15,7 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   border-radius: 10px;
 }
 .container .sidebar {
@@ -23,12 +23,13 @@
   height: 95%;
 }
 .container .player {
+  border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   width: 58%;
-  height: 95%;
+  height: 100%;
   background: rgb(175, 221, 221);
   background: linear-gradient(174deg, rgb(175, 221, 221) 0%, rgb(201, 235, 233) 33%);
 }
@@ -86,13 +87,6 @@
   gap: 20px;
   margin-top: 20px;
 }
-.container .player .controls .play {
-  height: 50px;
-  width: 50px;
-}
-.container .player .controls .range {
-  width: 300px;
-}
 .container .player .controls p {
   width: 300px;
   margin-top: -10px;
@@ -123,5 +117,5 @@
 }
 .container .player .controls .volume {
   position: absolute;
-  margin-left: 380px;
+  margin-left: 370px;
 }/*# sourceMappingURL=style.css.map */
