--- a/music/styles/style.scss
+++ b/music/styles/style.scss
@@ -17,17 +17,18 @@
     width: 900px;
     border: 2px solid midnightblue;
     @include center;
-    justify-content: space-evenly;
+    justify-content: space-between;
     border-radius: 10px;
     .sidebar{
         width: 40%;
         height: 95%;
     }
     .player{
+        border-radius: 10px;
         @include center;
         flex-direction: column;
         width: 58%;
-        height: 95%;
+        height: 100%;
         background: rgb(175,221,221);
         background: linear-gradient(174deg, rgba(175,221,221,1) 0%, rgba(201,235,233,1) 33%);        img{
         object-fit: cover;
@@ -73,13 +74,6 @@
                 gap: 20px;
                 margin-top: 20px;
             }
-            .play{
-                height: 50px;
-                width: 50px;
-            }
-            .range{
-                width: 300px;
-            }
             p{
                 width: 300px;
                 margin-top: -10px;
@@ -89,7 +83,6 @@
             input[type='range']{
                 -webkit-appearance: none;
                 appearance: none;
-
             }
             input[type="range"]::-webkit-slider-runnable-track {
                 -webkit-appearance: none;
@@ -108,7 +101,7 @@
              }
              .volume{
                 position: absolute;
-                margin-left: 380px;
+                margin-left: 370px;
              }
         }
     }
