--- a/music/styles/style.scss
+++ b/music/styles/style.scss
@@ -1,108 +1,114 @@
-@mixin center(){
-    display: flex;
-    justify-content: center;
-    align-items: center;
+@mixin center() {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
-.container{
-    position: absolute;
-    top:50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    height: 600px;
-    width: 900px;
-    border: 2px solid midnightblue;
-    @include center;
-    justify-content: space-between;
+.container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 600px;
+  width: 900px;
+  border: 2px solid midnightblue;
+  @include center;
+  justify-content: space-between;
+  border-radius: 10px;
+  .sidebar {
+    width: 40%;
+    height: 95%;
+  }
+  .player {
     border-radius: 10px;
-    .sidebar{
+    @include center;
+    flex-direction: column;
+    width: 58%;
+    height: 100%;
+    background: rgb(175, 221, 221);
+    background: linear-gradient(
+      174deg,
+      rgba(175, 221, 221, 1) 0%,
+      rgba(201, 235, 233, 1) 33%
+    );
+    img {
+      object-fit: cover;
+      box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    }
+    .details {
+      height: 100px;
+      width: 100%;
+      @include center;
+      flex-direction: column;
+      gap: 10px;
+      .name {
+        font-size: 20px;
+        font-weight: bold;
+      }
+      .artist {
+        font-size: 16px;
+      }
+    }
+    .controls {
+      @include center;
+      flex-direction: column;
+      gap: 20px;
+      img {
+        height: 40%;
         width: 40%;
-        height: 95%;
-    }
-    .player{
-        border-radius: 10px;
+        box-shadow: none;
+      }
+      button {
         @include center;
-        flex-direction: column;
-        width: 58%;
-        height: 100%;
-        background: rgb(175,221,221);
-        background: linear-gradient(174deg, rgba(175,221,221,1) 0%, rgba(201,235,233,1) 33%);        img{
-        object-fit: cover;
-        box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+        height: 40px;
+        width: 40px;
+        background: #b5e0df;
+        border-radius: 50%;
+        border: none;
+        cursor: pointer;
+        &:hover {
+          background: #b2dcdc;
         }
-        .details{
-            height: 100px;
-            width: 100%;
-            @include center;
-            flex-direction: column;
-            gap: 10px;
-            .name{
-                font-size: 20px;
-                font-weight: bold;
-            }
-            .artist{
-                font-size: 16px;
-            }
-        }
-        .controls{
-            @include center;
-            flex-direction: column;
-            gap: 20px;
-            img{
-                height: 40%;
-                width: 40%;
-                box-shadow: none;
-            }
-            button{
-                @include center;
-                height: 40px;
-                width: 40px;
-                background: #b5e0df;
-                border-radius: 50%;
-                border: none;
-                cursor: pointer;
-                &:hover{
-                    background: #b2dcdc;
-                }
-            }
-            .buttons,.bar{
-                @include center;
-                gap: 20px;
-                margin-top: 20px;
-            }
-            p{
-                width: 300px;
-                margin-top: -10px;
-                @include center;
-                justify-content: space-between;
-            }
-            input[type='range']{
-                -webkit-appearance: none;
-                appearance: none;
-            }
-            input[type="range"]::-webkit-slider-runnable-track {
-                -webkit-appearance: none;
-                background: #053a5f;
-                height: 0.4rem;
-                border-radius: 5px;
-            }
-            input[type="range"]::-webkit-slider-thumb {
-                -webkit-appearance: none; 
-                appearance: none;
-                margin-top: -7px;
-                border-radius: 50%;
-                background-color: rgb(115, 115, 211);
-                height: 20px;
-                width: 20px;    
-             }
-             .volume{
-                position: absolute;
-                margin-left: 370px;
-             }
-        }
+      }
+      .buttons,
+      .bar {
+        @include center;
+        gap: 20px;
+        margin-top: 20px;
+      }
+      p {
+        width: 300px;
+        margin-top: -10px;
+        @include center;
+        justify-content: space-between;
+      }
+      input[type="range"] {
+        -webkit-appearance: none;
+        appearance: none;
+      }
+      input[type="range"]::-webkit-slider-runnable-track {
+        -webkit-appearance: none;
+        background: #053a5f;
+        height: 0.4rem;
+        border-radius: 5px;
+      }
+      input[type="range"]::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        margin-top: -7px;
+        border-radius: 50%;
+        background-color: rgb(115, 115, 211);
+        height: 20px;
+        width: 20px;
+      }
+      .volume {
+        position: absolute;
+        margin-left: 370px;
+      }
     }
+  }
 }
