--- a/music/styles/style.css
+++ b/music/styles/style.css
@@ -5,6 +5,16 @@
   font-family: sans-serif;
 }
 
+.imageBg {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  -o-object-fit: cover;
+     object-fit: cover;
+  opacity: 0.8;
+  filter: blur(5px);
+}
+
 .container {
   position: absolute;
   top: 50%;
@@ -169,7 +179,7 @@ input::placeholder {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 
 ::-webkit-scrollbar-thumb {
