--- a/music/styles/style.scss
+++ b/music/styles/style.scss
@@ -9,6 +9,14 @@
   box-sizing: border-box;
   font-family: sans-serif;
 }
+.imageBg{
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+  opacity: 0.8;
+  filter: blur(5px);
+}
 .container {
   position: absolute;
   top: 50%;
@@ -155,11 +163,12 @@ input::placeholder{
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 8px;
 }
 ::-webkit-scrollbar-thumb {
   background: #888;
   border-radius: 20px;
+
   &:hover{
     background: #555; 
   }
