--- a/music/styles/style.css
+++ b/music/styles/style.css
@@ -39,9 +39,6 @@
   background: rgb(175, 221, 221);
   background: linear-gradient(174deg, rgb(175, 221, 221) 0%, rgb(201, 235, 233) 33%);
 }
-.container .player img {
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
 .container .player .details {
   height: 100px;
   width: 100%;
@@ -77,40 +74,12 @@
 .container .player .controls button:hover {
   background: #b2dcdc;
 }
-.container .player .controls .buttons,
-.container .player .controls .bar {
+.container .player .controls .buttons {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
   margin-top: 20px;
-}
-.container .player .controls p {
-  width: 300px;
-  margin-top: -10px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  justify-content: space-between;
-}
-.container .player .controls input[type=range] {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-       appearance: none;
-}
-.container .player .controls input[type=range]::-webkit-slider-runnable-track {
-  background: #053a5f;
-  height: 0.4rem;
-  border-radius: 5px;
-}
-.container .player .controls input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  margin-top: -7px;
-  border-radius: 50%;
-  background-color: rgb(115, 115, 211);
-  height: 20px;
-  width: 20px;
 }
 .container .sidebar {
   display: flex;
